# python.for.kids

./: .gitignore  howto.txt
Projects/: JSNotebook.ipynb  jsondict.ipynb  supermarkets.ipynb
algorithm/: 2015基础 - 幻方题目.ipynb
basic/week1/: 程序结构.ipynb  第1周作业.ipynb  运算符.ipynb
basic/week10/: 函数和排序.ipynb  第10周习题.ipynb
basic/week11/: 第11周习题-答案.ipynb  第11周习题.ipynb
basic/week13/: 绘图技巧.ipynb
basic/week14/: 期末练习题.ipynb
basic/week2/: Range.ipynb  条件语句.ipynb  第2周作业.ipynb  第2周内容.ipynb
basic/week2.1/: 第2周加课.ipynb
basic/week3/: 字符串操作.ipynb  第3周作业.ipynb
basic/week4/: 列表操作.ipynb  第4周作业.ipynb
basic/week6/: 函数入门.ipynb  第6周作业.ipynb
basic/week7/: 字典操作.ipynb  第7周作业.ipynb
basic/week7.1/: 字典练习题.ipynb  编程练习题.ipynb
basic/week9/: 第5周作业.ipynb  第9周作业.ipynb  集合操作.ipynb
basic/期末编程/: 期末编程.ipynb
basic/第5周/: 字典操作.ipynb
basic/第6周/: 函数入门.ipynb
basic/第8周/: Recursion.ipynb  文件操作.ipynb
basic/第9周/: decorator.ipynb  类和对象.ipynb
basic/第N周/: 排序算法.ipynb
basic2/loops/: boring.py  racers.py
basic2/string/: search_word.py
machine.learning/: kaggle_data.py  kerasample.ipynb  mlsample.ipynb  np exercises.ipynb  npsample.ipynb  tfsample.ipynb
nlp/: char_rnn.ipynb  char_rnn.py  word_rnn.ipynb
projects/bookstore/: backend.py  books.db
projects/licenseplates/: license_digits.py  license_letters.py  license_plates.py
projects/simplecmake/: CMakeLists.txt  hello-vsc.cpp
projects/simpleones/: knn.py  (+8 more)
week1/: 语言介绍.ipynb
week2/: 循环语句.ipynb  第1周回顾.ipynb  第2周内容.ipynb
week2.1/: 第2周加课.ipynb  编程习题.ipynb
week3/: 字符串操作.ipynb
week4/: 列表操作.ipynb
第5周/: 第5周作业.ipynb
第N周/: 高级数据结构.ipynb
(+12 files in other folders)
